--- a/onoff.cfg
+++ b/onoff.cfg
@@ -1,5 +1,5 @@
 [measurement]
-antennas = 2a,2b,2j,1c
+antennas = 1a,2a
 freq = 1400,2500,3500,4500,5500,6500,7500,8500,9500
 sources = moon,casa 
 
