--- a/onoff.cfg
+++ b/onoff.cfg
@@ -1,5 +1,5 @@
 [measurement]
-antennas = 1c,2a,2b,2h,2j,4j,4g,5c
+antennas = 1a,1c,2a,2b,2h,2j,4j,4g,5c
 freq = 1400,2500,3500,4500,5500,6500,7500,8500,9500
 sources = moon 
 
